# fillit_try

./: CMakeLists.txt  bad  tetris
includes/: fillit.h
libft/: Makefile
libft/includes/: get_next_line.h
libft/srcs/: ft_putstr.c  ft_strjoin.c  ft_strsub.c  get_next_line.c
srcs/: main.c  parsing.c  print.c  solve.c
